fixed alignment

--- a/default.css
+++ b/default.css
@@ -4,19 +4,16 @@ body {
 }
 
 input {
-    height: 30px;
+    width: 230px;
+    height: 10px;
     padding: 20px;
 }
 .single {
     margin: 10px 0px 30px;
 }
-.shade {
-    border: none;
-    border-bottom: 1px solid black;
-    background-color: lightgray;
-    outline: none;
-    width: 230px;
-    height: 10px;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
+.inside {
+    margin: 20px 5px;
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
 }
